# ParchMint

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  PLAN.md  README.md  deny.toml  justfile
.cargo/: config.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
app/cpp/: CMakeLists.txt  editor_adapter.cpp  editor_adapter.h  main.cpp  markdown_highlighter.cpp  markdown_highlighter.h  outline_model.h  semantic_object_renderer.cpp  semantic_object_renderer.h
app/cpp/models/: cards_model.cpp  cards_model.h  outline_model.cpp  outline_model.h
app/qml/: Main.qml
app/qml/components/: BinderPane.qml  CardsView.qml  DesignTokens.qml  EditorWorkspace.qml  FormattingBar.qml  IconButton.qml  InspectorPane.qml  OutlineView.qml  PaneHost.qml  SourceEditor.qml  StyleManager.qml  StylePicker.qml
cmake/: Packaging.cmake
crates/parchmint-app/: Cargo.toml  README.md
crates/parchmint-app/src/: commands.rs  diagnostics.rs  document.rs  export.rs  lib.rs  path.rs  search.rs  workspace.rs
crates/parchmint-bridge/: .qmlls.ini  Cargo.toml  README.md  build.rs  qml
crates/parchmint-bridge/src/: backend.rs  lib.rs  path_helper.cpp  path_helper.h  pdf_renderer.cpp  pdf_renderer.h
crates/parchmint-compile/: Cargo.toml  README.md
crates/parchmint-compile/src/: lib.rs
crates/parchmint-domain/: Cargo.toml  README.md
crates/parchmint-domain/src/: lib.rs
crates/parchmint-index/: Cargo.toml  README.md
crates/parchmint-index/src/: lib.rs
crates/parchmint-markdown/: Cargo.toml  README.md
crates/parchmint-markdown/src/: lib.rs
crates/parchmint-storage/: Cargo.toml  README.md
crates/parchmint-storage/src/: lib.rs
crates/parchmint-test-support/: Cargo.toml  README.md
crates/parchmint-test-support/src/: lib.rs
docs/: README.md  conventions.md
docs/architecture/: 0001-qt-version-linking-and-license.md  0002-qml-text-editor-host.md  0003-cxx-qt-boundaries-and-threading.md  0004-markdown-parser-and-semantic-ast.md  0005-parchmint-markdown-extensions.md  0006-atomic-write-and-recovery-direction.md  0007-sqlite-fts-cache.md  0008-testing-and-ci.md  0009-maintained-yaml-parser.md  0010-revisioned-document-lifecycle.md  0011-docx-writer-boundary.md  0012-linux-packaging-and-update-strategy.md  0013-distribution-license.md  0014-incremental-transactions-and-revisions.md  README.md  concurrency.md  editor.md  persistence.md  services.md
docs/architecture/adr/: 0001-qt-version-linking-and-license.md  0002-qml-text-editor-host.md  0003-cxx-qt-boundaries-and-threading.md  0004-markdown-parser-and-semantic-ast.md  0005-parchmint-markdown-extensions.md  0006-atomic-write-and-recovery-direction.md  0007-sqlite-fts-cache.md  0008-testing-and-ci.md  0009-maintained-yaml-parser.md  0010-revisioned-document-lifecycle.md  0011-docx-writer-boundary.md  0012-linux-packaging-and-update-strategy.md  0013-distribution-license.md  0014-incremental-transactions-and-revisions.md  README.md
docs/development/: README.md  architecture-navigation.md  bootstrap.md  conventions.md  dependency-inventory.md  editor-platform-charter.md  keyboard-shortcuts.md  localization.md  performance-budgets.md  performance.md  platform-test-charter.md  regression-matrix.md  setup.md  testing.md  translations.md
docs/export/: support-matrix.md
docs/format/: README.md  parchmint-markdown-1.md  project-format-1.json  project-format-1.md  recovery-1.md
docs/handoffs/: 01-foundation-and-risk-spikes.md  02-project-domain-and-storage.md  03-editor-document-lifecycle.md  04-binder-outline-and-cards.md  05-research-and-split-workspace.md  06-search-index-and-statistics.md  07-compile-and-export.md  08-fixtures-documentation-and-regression-matrix.md  09-cross-platform-hardening-and-release.md  11-markdown-and-export-integrity.md  12-live-document-and-project-safety.md  13-production-workflows-and-visual-system.md  14-incremental-scale-architecture.md
docs/legal/: PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  THREAT-MODEL.md
docs/product/: README.md
docs/reference/: export-fidelity.md  keyboard-shortcuts.md
docs/release/: checklist.md  compatibility.md  platform-validation.md  platforms.md  process.md  support-matrix.md
docs/user-guide/: README.md  backup-recovery.md  binder.md  compile-export.md  editing.md  editor-styles.md  examples.md  export.md  install.md  projects.md  quick-start.md  recovery.md  research-split.md  search.md
examples/format-edge-case/: styles.toml
examples/harbor-lights/: outline.toml  parchmint.toml  styles.toml
examples/medium-novel/: outline.toml  parchmint.toml
examples/research-heavy/: outline.toml  parchmint.toml
examples/tour/: outline.toml  parchmint.toml
examples/unicode-notes/: outline.toml  parchmint.toml
packaging/linux/: build-appimage.sh  org.parchmint.ParchMint.desktop  org.parchmint.ParchMint.metainfo.xml  org.parchmint.ParchMint.xml  org.parchmint.ParchMint.yml
packaging/macos/: Info.plist.in  entitlements.plist  sign-and-notarize.sh
packaging/windows/: README.md  sign.ps1
plans/: 00-easy-stage-index.md  01-very-hard-foundation-and-risk-spikes.md  02-hard-project-domain-and-storage.md  03-very-hard-editor-document-lifecycle.md  04-medium-binder-outline-and-cards.md  05-medium-research-and-split-workspace.md  06-medium-search-index-and-statistics.md  07-hard-compile-and-export.md  08-luna-easy-fixtures-documentation-and-regression-matrix.md  09-very-hard-cross-platform-hardening-and-release.md  10-audit-report.md  11-hard-markdown-and-export-integrity.md  12-very-hard-live-document-and-project-safety.md  13-hard-production-workflows-and-visual-system.md  14-very-hard-incremental-scale-architecture.md  15-hard-release-readiness.md  16-very-hard-product-quality-follow-ups.md  README.md
scripts/: detect-gpu.sh  host-env.sh  install-dependencies.sh
tests/fixtures/: README.md
tests/fixtures/corpus/: 100-nodes.toml  1000-nodes.toml  (+2 more)
tests/qt/: tst_editor_adapter.cpp  tst_editor_benchmark.cpp  tst_outline_model.cpp
translations/: ParchMint_en.ts
(+33 files in other folders)
