[package]
name = "parchmint-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
parchmint-domain = { path = "../parchmint-domain" }
parchmint-index = { path = "../parchmint-index" }
parchmint-markdown = { path = "../parchmint-markdown" }
parchmint-storage = { path = "../parchmint-storage" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
