[package]
name = "parchmint_bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
links = "parchmint_bridge"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib.workspace = true
parchmint-app = { path = "../parchmint-app" }
parchmint-domain = { path = "../parchmint-domain" }
parchmint-markdown = { path = "../parchmint-markdown" }
tracing.workspace = true
tempfile.workspace = true
serde_json.workspace = true

[build-dependencies]
cxx-qt-build.workspace = true

[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unnecessary_box_returns = "allow"
