[package]
name = "parchmint-compile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
parchmint-domain = { path = "../parchmint-domain" }
parchmint-markdown = { path = "../parchmint-markdown" }
parchmint-storage = { path = "../parchmint-storage" }
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
