[package]
name = "parchmint-markdown"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
indexmap.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
noyalib.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
