[package]
name = "parchmint-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tempfile.workspace = true
thiserror.workspace = true
parchmint-domain = { path = "../parchmint-domain" }
parchmint-markdown = { path = "../parchmint-markdown" }
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
