[package]
name = "parchmint-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Deterministic fixture and stress-corpus helpers for ParchMint tests"

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
